[project]
name = "lfx"
version = "0.2.0"
description = "Langflow Executor - A lightweight CLI tool for executing and serving Langflow AI flows"
readme = "README.md"
authors = [
    { name = "Gabriel Luiz Freitas Almeida", email = "gabriel@langflow.org" }
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "asyncer>=0.0.5,<1.0.0",
    "bcrypt==4.0.1",
    "emoji>=2.12.0,<3.0.0",
    "beautifulsoup4==4.12.3",
    "google-search-results>=2.4.1,<3.0.0",
    "google-api-python-client==2.154.0",
    "huggingface-hub[inference]>=0.23.2,<1.0.0",
    "networkx==3.4.2",
    "fake-useragent==1.5.1",
    "pyarrow==19.0.0",
    "wikipedia==1.4.0",
    "qdrant-client==1.9.2",
    "weaviate-client>=4.10.2,<5.0.0",
    "faiss-cpu==1.9.0.post1",
    "types-cachetools>=5.5.0.20240820,<6.0.0",
    "pymongo==4.10.1",
    "supabase>=2.6.0,<3.0.0",
    "certifi>=2023.11.17,<2025.0.0",
    'fastavro==1.9.7; python_version < "3.13"',
    'fastavro>=1.9.8,<2.0.0; python_version >= "3.13"',
    "redis>=5.2.1,<6.0.0",
    "metaphor-python==0.1.23",
    'pywin32>=307,<400; sys_platform == "win32"',
    "langfuse==2.53.9",
    "metal_sdk==2.5.1",
    "MarkupSafe==3.0.2",
    "boto3>=1.34.162,<2.0.0",
    "numexpr==2.10.2",
    "qianfan==0.3.5",
    "pgvector==0.3.6",
    "langchain==0.3.23",
    "elasticsearch==8.16.0",
    "pytube==15.0.0",
    "dspy-ai==2.5.41",
    "datasets>2.14.7,<4.0.0",
    "assemblyai==0.35.1",
    "litellm>=1.60.2,<2.0.0",
    "chromadb>=1.0.0,<2.0.0",
    "zep-python==2.0.2",
    "youtube-transcript-api>=1.0.0,<2.0.0",
    "Markdown==3.7",
    "upstash-vector==0.6.0",
    "GitPython==3.1.43",
    "kubernetes==31.0.0",
    "json_repair==0.30.3",
    "langwatch>=0.2.11,<0.3.0",
    "langsmith>=0.3.42,<1.0.0",
    "yfinance==0.2.50",
    "wolframalpha==5.1.3",
    "astra-assistants[tools]>=2.2.13,<3.0.0",
    "composio==0.9.2",
    "composio-langchain==0.9.2",
    "spider-client==0.1.24",
    "nltk==3.9.1",
    "lark==1.2.2",
    "jq==1.8.0",
    "pydantic-settings>=2.2.0,<3.0.0",
    "duckduckgo_search==7.2.1",
    "opensearch-py==2.8.0",
    "passlib>=1.7.4,<2.0.0",
    "langchain-google-genai==2.0.6",
    "langchain-cohere>=0.3.3,<1.0.0",
    "langchain-huggingface==0.3.1",
    "langchain-anthropic==0.3.14",
    "langchain-astradb>=0.6.1,<1.0.0",
    "langchain-openai>=0.2.12,<1.0.0",
    "langchain-google-vertexai>=2.0.7,<3.0.0",
    "langchain-groq==0.2.1",
    "langchain-pinecone>=0.2.8,<1.0.0",
    "langchain-mistralai==0.2.3",
    "langchain-chroma>=0.2.6,<1.0.0",
    "langchain-aws>=0.2.33,<1.0.0",
    "langchain-unstructured==0.1.5",
    "langchain-milvus==0.1.7",
    "langchain-mongodb==0.7.0",
    "langchain-nvidia-ai-endpoints==0.3.8",
    "langchain-google-calendar-tools==0.0.1",
    "langchain-google-community>=2.0.3,<3.0.0",
    "langchain-elasticsearch>=0.3.0,<1.0.0",
    "langchain-ollama==0.3.10",
    "langchain-sambanova==0.1.0",
    "langchain-community>=0.3.21,<1.0.0",
    "sqlalchemy[aiosqlite]>=2.0.38,<3.0.0",
    "atlassian-python-api==3.41.16",
    "mem0ai==0.1.34",
    "needle-python>=0.4.0,<1.0.0",
    "aiofile>=3.9.0,<4.0.0",
    "sseclient-py==1.8.0",
    "arize-phoenix-otel>=0.6.1,<1.0.0",
    "openinference-instrumentation-langchain>=0.1.29,<0.1.52",
    # "crewai>=0.126.0",
    "fastmcp==2.13.0",
    "mcp>=1.17.0,<2.0.0",
    "uv==0.7.20",
    "scipy>=1.14.1,<1.16.2",
    "scrapegraph-py>=1.12.0,<2.0.0",
    "pydantic-ai>=0.0.19,<1.0.0",
    "smolagents>=1.8.0,<2.0.0",
    "apify-client>=1.8.1,<2.0.0",
    "langchain-graph-retriever==0.8.0",
    "graph-retriever==0.8.0",
    "ibm-watsonx-ai>=1.3.1,<2.0.0",
    "langchain-ibm>=0.3.8",
    "opik>=1.6.3,<2.0.0",
    "openai>=1.68.2,<2.0.0",
    "cleanlab-tlm>=1.1.2,<2.0.0",
    "gassist>=0.0.1; sys_platform == 'win32'",
    "twelvelabs>=0.4.7,<1.0.0",
    "filelock>=3.18.0,<4.0.0",
    "jigsawstack==0.2.7",
    "structlog>=25.4.0,<26.0.0",
    "cryptography>=43.0.1,<44.0.0",
    "aiosqlite==0.21.0",
    "fastparquet>=2024.11.0,<2025.0.0",
    "traceloop-sdk>=0.43.1,<1.0.0",
    "vlmrun[all]>=0.2.0",
    "cuga~=0.1.11",
    "agent-lifecycle-toolkit~=0.4.4",
    "astrapy>=2.1.0,<3.0.0",
    "aioboto3>=15.2.0,<16.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "rich>=13.7.0,<14.0.0",
    "typer>=0.13.0,<1.0.0",
    "uvicorn>=0.30.0,<1.0.0"
]

[project.optional-dependencies]
docling = [
    "docling-core>=2.36.1,<3.0.0",
    "docling>=2.36.1,<3.0.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "easyocr>=1.7.2,<2.0.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "mlx>=0.29.0; sys_platform == 'darwin' and platform_machine == 'arm64' and python_version >= '3.12'",
    "mlx-vlm==0.3.3; sys_platform == 'darwin' and platform_machine == 'arm64' and python_version >= '3.12'",
]

[project.scripts]
lfx = "lfx.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lfx"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers --disable-warnings --color=yes"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow-running tests",
    "asyncio: Async tests"
]

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "blockbuster>=1.5.25",
    "coverage>=7.9.2",
    "hypothesis>=6.136.3",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.9.10",
]

[tool.coverage.run]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/components/*",  # Third-party integrations tracked separately
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == '__main__':",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
