[tool.poetry]
name = "ragstack-ai-langflow-core"
version = "0.0.1.alpha"
description = "RAGStack Langflow"
license = "BUSL-1.1"
authors = ["DataStax"]
readme = "README.md"
documentation = "https://docs.datastax.com/en/ragstack"


[tool.poetry.dependencies]
python = ">=3.10,<3.12"

[tool.poetry.group.test.dependencies]
ragstack-ai-langflow = { path = "../../..", develop = true }
pytest = "^8.1.0"
pytest-instafail = "^0.5.0"
pytest-sugar = "^1.0.0"
pytest-order = "^1.2.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
ruff = "^0.3.5"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = ["tests/integration_tests"]
filterwarnings = ["ignore::DeprecationWarning"]
console_output_style = "progress"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.poetry.group.spelling]
optional = true

[tool.poetry.group.spelling.dependencies]
codespell = "^2.2.6"

[tool.codespell]
skip = '.git,*.pdf,*.svg,*.pdf,*.yaml,*.ipynb,poetry.lock,*.min.js,*.css,package-lock.json,*.trig'
# Ignore latin etc
ignore-regex = '.*(Stati Uniti|Tense=Pres).*'

[tool.ruff]
line-length = 120

[tool.mypy]
plugins = ["pydantic.mypy"]
follow_imports = "silent"
exclude = "tests/integration_tests/conftest.py"

[[tool.mypy.overrides]]
module = "google.cloud.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
